Fixing the z-index

--- a/css/custom.css
+++ b/css/custom.css
@@ -50,6 +50,3 @@ hr.underline {
     bottom: 8px;
     right: 16px;
 }
-.bio {
-    z-index: 4;
-}
