--- a/css/particles.css
+++ b/css/particles.css
@@ -20,7 +20,7 @@ canvas {
 }
 
 #aa_particles {
-  z-index: 4;
+  z-index: 0;
   height: 100%;
   height: 100vh;
   background: #674172;
@@ -29,7 +29,7 @@ canvas {
 .header_section {
   position: absolute;
   text-align: center;
-  z-index: 5;
+  z-index: 1;
   color: #ffffff!important;
   top: 50%;
   right: 0;
